# KYA

./: README.md  audit-service.md  pyproject.toml
.github/workflows/: verify-cards.yml
docs/: ROADMAP-2027.md  distribution-posts.md  index.html
docs/blog/: audit-trails-for-ai-agent-decisions.md  mcp-servers-have-no-security-standard.md  prompt-injection-in-agent-pipelines.md
schema/: kya-v0.1.schema.json
schema/examples/: mcp-security-audit.kya.json
src/kya/: __init__.py  cli.py  kya-v0.1.schema.json  signer.py  validator.py
tests/: test_signer.py
